refactor: remove `gui`